--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "three-dev-tool",
   "version": "1.0.0",
   "description": "Intuitive and dynamic Chrome Dev Tool Extension for Three.js debugging",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config webpack/webpack.config.js"
@@ -21,6 +20,7 @@
   "devDependencies": {
     "@types/chrome": "^0.0.193",
     "copy-webpack-plugin": "^11.0.0",
+    "html-webpack-plugin": "^5.5.0",
     "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
     "webpack": "^5.74.0",
