content script injection testing

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,9 +4,18 @@
   "version": "1.0",
   "manifest_version": 3,
   "permissions": [
-    "activeTab",
+    // "activeTab",
+    "webNavigation",
     "scripting"
  ],
+ "host_permissions": ["<all_urls>"],
+ "content_scripts": [
+  {
+    "matches": ["http://127.0.0.1:5500/index.html"],
+    "js": ["./canvasSpy.js"],
+    "run_at": "document_end"
+  }
+],
  "background": {
   "service_worker": "./background.js"
 },
