Working towards getting things to appear

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,6 +9,10 @@
     "scripting"
  ],
  "host_permissions": ["<all_urls>"],
+ "web_accessible_resources": [{
+  "resources": ["script.js"],
+  "matches": ["<all_urls>"]
+ }],
  "content_scripts": [
   {
     "matches": ["<all_urls>"],
