--- a/package.json
+++ b/package.json
@@ -34,6 +34,10 @@
     "webpack-cli": "^4.10.0"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.10.1",
     "three": "^0.143.0"
   }
 }
