--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@emotion/styled": "^11.10.0",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.10.1",
+    "react-colorful": "^5.6.1",
     "three": "^0.143.0"
   }
 }
