--- a/package.json
+++ b/package.json
@@ -22,11 +22,17 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/three": "^0.143.0",
+    "@typescript-eslint/eslint-plugin": "^5.36.1",
+    "@typescript-eslint/parser": "^5.36.1",
     "babel-loader": "^8.2.5",
     "copy-webpack-plugin": "^11.0.0",
+    "eslint": "^8.23.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
     "html-webpack-plugin": "^5.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "three": "^0.143.0",
     "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
@@ -40,6 +46,8 @@
     "@mui/material": "^5.10.1",
     "css-loader": "^6.7.1",
     "postcss-loader": "^7.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-colorful": "^5.6.1",
     "style-loader": "^3.3.1",
     "three": "^0.143.0"
