--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,16 @@
         "consistent-return": 0,
         "class-methods-use-this": 0,
         "no-param-reassign": 0,
-        "no-console": "off"
+        "no-console": "off",
+        "import/extensions": [
+            "error",
+            "ignorePackages",
+            {
+              "js": "never",
+              "jsx": "never",
+              "ts": "never",
+              "tsx": "never"
+            }
+         ]
     }
 }
